fix: projects being cut off

--- a/src/styles/GeneralForm.css
+++ b/src/styles/GeneralForm.css
@@ -14,3 +14,14 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+.btnContainer {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+
+#addProjectBtn {
+  width: 30px;
+  margin-bottom: 1rem;
+}
